# xpemlflow

./: .gitignore  README.md  app.py  pyproject.toml  rest.http  test_api.py
.github/workflows/: ci.yml
mlruns/0/: meta.yaml
mlruns/227068935942943404/: meta.yaml
mlruns/227068935942943404/3106d01e45ba478eba54948a0910f070/: meta.yaml
mlruns/227068935942943404/3106d01e45ba478eba54948a0910f070/artifacts/random_forest_model/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
mlruns/227068935942943404/3106d01e45ba478eba54948a0910f070/metrics/: accuracy
mlruns/227068935942943404/3106d01e45ba478eba54948a0910f070/tags/: mlflow.log-model.history  mlflow.runName
mlruns/227068935942943404/a2f316044b52402198c8573351bb1041/: meta.yaml
mlruns/227068935942943404/a2f316044b52402198c8573351bb1041/artifacts/random_forest_model/: MLmodel
mlruns/227068935942943404/a2f316044b52402198c8573351bb1041/metrics/: accuracy
mlruns/227068935942943404/a2f316044b52402198c8573351bb1041/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
