[tool.poetry]
name = "xpemlflow"
version = "0.1.0"
description = ""
authors = [
    "Afonsolelis <66492757+afonsolelis@users.noreply.github.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.8,<0.116.0"
pydantic = ">=2.10.6,<3.0.0"
seaborn = ">=0.13.2,<0.14.0"
scikit-learn = ">=1.6.1,<2.0.0"
numpy = ">=2.2.2,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
uvicorn = ">=0.34.0,<0.35.0"
mlflow = ">=2.20.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"